@@ -238,8 +238,6 @@
  ("src/code/misc")
 
  ("src/code/room"   :not-host)
- ("src/code/gc"     :not-host)
- ("src/code/purify" :not-host)
 
  ("src/code/stream"        :not-host)
  ("src/code/print"         :not-host)
@@ -609,6 +607,8 @@
  #!-sb-thread
  ("src/code/target-unithread"  :not-host)
  ;; defines SB!DI:DO-DEBUG-FUN-BLOCKS, needed by target-disassem.lisp
+ ("src/code/gc"     :not-host)
+ ("src/code/purify" :not-host)
  ("src/code/debug-int" :not-host)
 
  ;; target-only assemblerish stuff
